--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -10,6 +10,6 @@
     <input name="username" id="username" required>
     <label for="password">Пароль</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="register">
+    <input type="submit" value="Зарегистрироваться">
   </form>
 {% endblock %}
